--- a/part4/list-blogs/package.json
+++ b/part4/list-blogs/package.json
@@ -4,17 +4,29 @@
   "description": "lista de blogs",
   "main": "index.js",
   "scripts": {
-    "start": "node index.js",
-    "test": "echo \"Error: no test specified\" && exit 1",
-    "dev": "nodemon index.js"
+    "start": "cross-env NODE_ENV=production node index.js",
+    "dev": "cross-env NODE_ENV=development nodemon index.js",
+    "test": "cross-env NODE_ENV=test jest --verbose --runInBand"
   },
   "author": "anderson.gomez@utp.edu.co",
   "license": "ISC",
   "dependencies": {
+    "bcryptjs": "^2.4.3",
     "cors": "^2.8.5",
     "dotenv": "^16.0.3",
     "express": "^4.18.2",
+    "express-async-errors": "^3.1.1",
+    "jsonwebtoken": "^8.5.1",
     "mongoose": "^6.6.5",
+    "mongoose-unique-validator": "^3.1.0",
     "nodemon": "^2.0.20"
+  },
+  "devDependencies": {
+    "cross-env": "^7.0.3",
+    "jest": "^29.1.2",
+    "supertest": "^6.3.0"
+  },
+  "jest": {
+    "testEnvironment": "node"
   }
 }
